2005-11-11  Sven Neumann  <sven@gimp.org>

	* INSTALL: document --enable-binreloc.

2005-11-11  Michael Natterer  <mitch@gimp.org>

	* m4macros/binreloc.m4: disable binreloc by default.

2005-11-11  Sven Neumann  <sven@gimp.org>

	* app/base/tile-swap.c (tile_swap_default_in): fixed compilation
	of experimental threaded tile-swapper. Fixes bug #320977.

2005-11-09  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/gimpmodule.c: wrap gimpenv directory functions.

2005-11-09  Karine Delvare  <kdelvare@nerim.net>

	* app/tools/gimprectangletool.c: better fixed-aspect behavior.

2005-11-09  Simos Xenitellis  <simos@gnome.org>

	* configure.in: (Re)Added tt (Tatarish) to ALL_LINGUAS, 
	added stubs for missing PO files.

2005-11-09  Michael Natterer  <mitch@gimp.org>

	* app/paint-funcs/paint-funcs-generic.h
	* app/paint-funcs/paint-funcs.c: reverted patch which makes
	alpha=255 when turned off because these functions are not only
	used for display projection. Re-opens bug #143315.
	Fixes bug #307213.

2005-11-08  Michael Natterer  <mitch@gimp.org>

	* configure.in: Removed 'tt' again until all po files are there.

2005-11-08  Simos Xenitellis  <simos@gnome.org>

	* configure.in: Added tt (Tatarish) to ALL_LINGUAS.

2005-11-08  Michael Natterer  <mitch@gimp.org>

	* plug-ins/script-fu/scripts/guides-new.scm
	* plug-ins/script-fu/scripts/guides-new-percent.scm: look at the
	image's width/height, not the drawable's. Fixes bug #320933.

2005-11-07  Michael Natterer  <mitch@gimp.org>

	* app/core/gimp-modules.c
	* app/menus/menus.c: more output on --verbose

2005-11-06  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpcolorpickertool.c (gimp_color_picker_tool_picked):
	when picking FG or BG color from an indexed layer, select its
	index in the colormap editor. Fixes bug #320660.

2005-11-06  Michael Natterer  <mitch@gimp.org>

	* app/core/gimp-contexts.c
	* app/core/gimp-documents.c
	* app/core/gimp-parasites.c
	* app/core/gimp-templates.c
	* app/core/gimp-units.c