@@ -1,3 +1,8 @@
+2005-11-13  Sven Neumann  <sven@gimp.org>
+
+	* app/core/gimpdatafactory.c (gimp_data_factory_data_free): do not
+	return a value from a void function. Fixes bug #321333.
+
 2005-11-11  Sven Neumann  <sven@gimp.org>
 
 	* INSTALL: document --enable-binreloc.
